NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/NATT_Address__c.object-meta.xml
<CustomObject>
    <label>Address</label>
    <nameField>
        <label>NATT Address</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>