NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/fields/CONTAINER_BaaN_Unique_Code__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_BaaN_Unique_Code__c</fullName>
    <description>Container BaaN Unique Code</description>
    <externalId>true</externalId>
    <label>CONTAINER BaaN Unique Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>