NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/fields/CONTAINER_Carrier_LSP__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Carrier_LSP__c</fullName>
    <description>Container   Carrier   LSP</description>
    <label>Carrier LSP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>