NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/fields/CONTAINER_Contact_Fax__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Contact_Fax__c</fullName>
    <description>Container Contact Fax</description>
    <label>Contact Fax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>