NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/fields/CONTAINER_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Contact_Name__c</fullName>
    <description>Container Contact Name</description>
    <label>Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>