NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/fields/CONTAINER_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Contact_Phone__c</fullName>
    <description>Container Contact Phone</description>
    <label>Contact Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>