NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/fields/CONTAINER_Internal_Sales_Rep_Code__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Internal_Sales_Rep_Code__c</fullName>
    <description>Container Internal Sales Rep Code</description>
    <label>Internal Sales Rep Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>