NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/fields/CONTAINER_JDE_Alpha_Name__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_JDE_Alpha_Name__c</fullName>
    <description>Container JDE Alpha Name</description>
    <label>JDE Alpha Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>