NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/fields/CONTAINER_JDE_Legacy_Number__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_JDE_Legacy_Number__c</fullName>
    <label>JDE Legacy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>