NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/fields/CTBR_District__c.field-meta.xml
<CustomField>
    <fullName>CTBR_District__c</fullName>
    <label>District</label>
    <length>50</length>
    <type>Text</type>
</CustomField>