NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/fields/CTBR_State_Provicence__c.field-meta.xml
<CustomField>
    <fullName>CTBR_State_Provicence__c</fullName>
    <formula>IF(
TEXT(NATT_State_Province__c) = &quot;GOBR&quot;,
&quot;CTB02&quot;,
IF(
TEXT(NATT_State_Province__c) = &quot;RSBR&quot;,
&quot;CTB01&quot;,
IF(
TEXT(NATT_State_Province__c) = &quot;SCBR&quot;,
&quot;Santa Catarina&quot;,
&quot;&quot;
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CTBR State Provicence</label>
    <type>Text</type>
</CustomField>