NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/fields/CTM_Category_Code_Address_Book_19__c.field-meta.xml
<CustomField>
    <fullName>CTM_Category_Code_Address_Book_19__c</fullName>
    <label>Category Code - Address Book 19</label>
    <length>3</length>
    <type>Text</type>
</CustomField>