NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/fields/CTM_Long_Address_Number__c.field-meta.xml
<CustomField>
    <fullName>CTM_Long_Address_Number__c</fullName>
    <label>Long Address Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>