NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/fields/CTM_Search_Type__c.field-meta.xml
<CustomField>
    <fullName>CTM_Search_Type__c</fullName>
    <label>Search Type</label>
    <length>3</length>
    <type>Text</type>
</CustomField>