NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/fields/NATT_Account__c.field-meta.xml
<CustomField>
    <fullName>NATT_Account__c</fullName>
    <description>NATT</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>NATT_Addresses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>