NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/fields/NATT_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>NATT_Account_Name__c</fullName>
    <description>NATT Account Name</description>
    <formula>NATT_Account__r.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>