NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/fields/NATT_Account_Record_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>NATT_Account_Record_Type_Developer_Name__c</fullName>
    <description>NATT - used in address trigger to prevent query</description>
    <formula>NATT_Account__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Record Type Developer Name</label>
    <type>Text</type>
</CustomField>