NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/fields/NATT_City__c.field-meta.xml
<CustomField>
    <fullName>NATT_City__c</fullName>
    <description>NATT</description>
    <label>City</label>
    <length>25</length>
    <type>Text</type>
</CustomField>