NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/fields/NATT_Country__c.field-meta.xml
<CustomField>
    <fullName>NATT_Country__c</fullName>
    <description>NATT</description>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NATT_Country_Picklist</valueSetName>
    </valueSet>
</CustomField>