NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/fields/NATT_Deactivated__c.field-meta.xml
<CustomField>
    <fullName>NATT_Deactivated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deactivated</label>
    <type>Checkbox</type>
</CustomField>