NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/fields/NATT_JDE_Address_ID__c.field-meta.xml
<CustomField>
    <fullName>NATT_JDE_Address_ID__c</fullName>
    <description>NATT</description>
    <externalId>true</externalId>
    <label>JDE Address ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>