NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/fields/NATT_JDE_Alpha_Name__c.field-meta.xml
<CustomField>
    <fullName>NATT_JDE_Alpha_Name__c</fullName>
    <label>JDE Alpha Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>