NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/fields/NATT_JDE_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>NATT_JDE_Record_Id__c</fullName>
    <description>NATT</description>
    <label>JDE Record Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>