NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/fields/Natt_latitude__c.field-meta.xml
<CustomField>
    <fullName>Natt_latitude__c</fullName>
    <label>Natt_latitude</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>