NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/fields/Natt_longitude__c.field-meta.xml
<CustomField>
    <fullName>Natt_longitude__c</fullName>
    <label>Natt_longitude</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>