NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/fields/NATT_State_Province__c.field-meta.xml
<CustomField>
    <fullName>NATT_State_Province__c</fullName>
    <description>NATT</description>
    <label>State/Province</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>NATT_Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>NATT_State_Picklist</valueSetName>
    </valueSet>
</CustomField>