NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/fields/NATT_Street_3__c.field-meta.xml
<CustomField>
    <fullName>NATT_Street_3__c</fullName>
    <description>NATT</description>
    <label>Street 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>