NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/fields/NATT_Street__c.field-meta.xml
<CustomField>
    <fullName>NATT_Street__c</fullName>
    <description>NATT</description>
    <label>Street</label>
    <length>254</length>
    <type>Text</type>
</CustomField>