NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/fields/NATT_Type__c.field-meta.xml
<CustomField>
    <fullName>NATT_Type__c</fullName>
    <description>NATT</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Dealer Agreement</fullName>
            </value>
            <value>
                <fullName>Distribution Centers</fullName>
            </value>
            <value>
                <fullName>Headquarters</fullName>
            </value>
            <value>
                <fullName>Mailing</fullName>
            </value>
            <value>
                <fullName>Other Mailing</fullName>
            </value>
            <value>
                <fullName>Parts Ship To</fullName>
            </value>
            <value>
                <fullName>Physical</fullName>
            </value>
            <value>
                <fullName>Regional Offices</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>Units Ship To</fullName>
            </value>
            <value>
                <fullName>Bill To</fullName>
            </value>
            <value>
                <fullName>Ship To</fullName>
            </value>
            <value>
                <fullName>TES Ship To</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>