NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/recordTypes/CONTAINER_Address.recordType-meta.xml
<RecordType>
    <fullName>CONTAINER_Address</fullName>
    <active>true</active>
    <description>It helps to identify the Bill To/Ship To address for Container</description>
    <label>CONTAINER Address</label>
</RecordType>