NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/recordTypes/CTBR_Address.recordType-meta.xml
<RecordType>
    <fullName>CTBR_Address</fullName>
    <active>true</active>
    <label>CTBR Address</label>
</RecordType>