NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/recordTypes/CTM_Address.recordType-meta.xml
<RecordType>
    <fullName>CTM_Address</fullName>
    <active>true</active>
    <description>Address RecordType for CTM.</description>
    <label>CTM Address</label>
</RecordType>