NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/recordTypes/NAC_Address.recordType-meta.xml
<RecordType>
    <fullName>NAC_Address</fullName>
    <active>true</active>
    <label>NAC Address</label>
</RecordType>