NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/recordTypes/NATT_Address.recordType-meta.xml
<RecordType>
    <fullName>NATT_Address</fullName>
    <active>true</active>
    <description>NATT</description>
    <label>NATT Address</label>
</RecordType>