NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/validationRules/CTBR_Restrict_Competitor_or_Customer.validationRule-meta.xml
<ValidationRule>
    <fullName>CTBR_Restrict_Competitor_or_Customer</fullName>
    <active>true</active>
    <description>Prevents CTBR Users from modifying Competitor or Customer Address</description>
    <errorConditionFormula>AND(
OR(NATT_Account__r.RecordType.DeveloperName = &quot;CTBR_Competitor&quot;,NATT_Account__r.RecordType.DeveloperName = &quot;CTBR_Customer&quot;),
$Profile.Name = &quot;CTBR Customer Master Responsible&quot;
)</errorConditionFormula>
    <errorMessage>You may not create or modify a Competitor or Customer Address</errorMessage>
</ValidationRule>