NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/validationRules/CTBR_Restrict_Customer_or_Dealer.validationRule-meta.xml
<ValidationRule>
    <fullName>CTBR_Restrict_Customer_or_Dealer</fullName>
    <active>true</active>
    <description>Prevents CTBR Users from modifying Customer or Dealer Address</description>
    <errorConditionFormula>AND(
OR(NATT_Account__r.RecordType.DeveloperName = &quot;CTBR_Customer&quot;,NATT_Account__r.RecordType.DeveloperName = &quot;CTBR_Dealer&quot;),
$Profile.Name = &quot;CTBR Support User&quot;
)</errorConditionFormula>
    <errorMessage>You may not create or modify a Customer or Dealer Address</errorMessage>
</ValidationRule>