NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/validationRules/CTBR_Restrict_Dealer_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>CTBR_Restrict_Dealer_Address</fullName>
    <active>true</active>
    <description>Prevents CTBR Users from modifying Dealer Address</description>
    <errorConditionFormula>AND(NATT_Account__r.RecordType.DeveloperName = &quot;CTBR_Dealer&quot;,
$Profile.Name = &quot;CTBR General Manager&quot;
)</errorConditionFormula>
    <errorMessage>You may not create or modify a Dealer Address</errorMessage>
</ValidationRule>