NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/validationRules/CTBR_Restrict_Dealer_Ship_To_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>CTBR_Restrict_Dealer_Ship_To_Address</fullName>
    <active>true</active>
    <description>Prevents CTBR Users from modifying Dealer Ship To Address</description>
    <errorConditionFormula>AND(
NATT_Account__r.RecordType.DeveloperName = &quot;CTBR_Dealer&quot;,
$Profile.Name = &quot;CTM Full Access Community&quot;,
ISPICKVAL(NATT_Type__c, &quot;Units Ship To&quot;)
)</errorConditionFormula>
    <errorMessage>You may not create or modify a Units Ship To address for a Dealer</errorMessage>
</ValidationRule>