NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/validationRules/CTBR_Restrict_Ship_To_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>CTBR_Restrict_Ship_To_Address</fullName>
    <active>true</active>
    <description>Prevents CTBR Users from modifying Dealer and Customer Ship To Address</description>
    <errorConditionFormula>AND(
OR(NATT_Account__r.RecordType.DeveloperName = &quot;CTBR_Dealer&quot;,NATT_Account__r.RecordType.DeveloperName = &quot;CTBR_Customer&quot;),
OR($Profile.Name = &quot;CTBR General Manager&quot;,$Profile.Name = &quot;CTBR Sales Manager&quot;,$Profile.Name = &quot;CTBR Sales User&quot;),
ISPICKVAL(NATT_Type__c, &quot;Units Ship To&quot;)
)</errorConditionFormula>
    <errorMessage>You may not create or modify a Units Ship To address for a Dealer and Customer</errorMessage>
</ValidationRule>