NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/validationRules/NATT_Billing_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>NATT_Billing_Type</fullName>
    <active>true</active>
    <description>NATT: Allows users with the NATT Bypass Billing Address custom permission to use the Billing type</description>
    <errorConditionFormula>AND($Permission.NATT_Bypass_Billing_Address=false,
NATT_Account__r.RecordType.DeveloperName=&apos;Dealer&apos;,
RecordType.DeveloperName=&apos;NATT_Address&apos;,
TEXT(NATT_Type__c) = &apos;Billing&apos;
)</errorConditionFormula>
    <errorDisplayField>NATT_Type__c</errorDisplayField>
    <errorMessage>You do not have permission to modify a Billing address</errorMessage>
</ValidationRule>