NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/validationRules/NATT_Dealer_Agreementl_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>NATT_Dealer_Agreementl_Type</fullName>
    <active>true</active>
    <description>NATT: Allows users with the NATT Bypass Dealer Agreement Address custom permission to use the Dealer Agreementl type</description>
    <errorConditionFormula>AND($Permission.NATT_Bypass_Dealer_Agreement_Address=false,
RecordType.DeveloperName=&apos;NATT_Address&apos;,
TEXT(NATT_Type__c) = &apos;Dealer Agreement&apos;)</errorConditionFormula>
    <errorDisplayField>NATT_Type__c</errorDisplayField>
    <errorMessage>You do not have permission to modify a Dealer Agreement address</errorMessage>
</ValidationRule>