NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/validationRules/NATT_Group_Account_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>NATT_Group_Account_Address</fullName>
    <active>true</active>
    <description>prevents users from creating or editing an address for Group Accounts</description>
    <errorConditionFormula>AND(
NATT_Account__r.RecordType.DeveloperName = &quot;NATT_Group_Ownership&quot;,
$Permission.NATT_Bypass_Group_Account = FALSE
)</errorConditionFormula>
    <errorMessage>You do not have permission to modify Addresses for Group Accounts</errorMessage>
</ValidationRule>