NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/validationRules/NATT_Mailing_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>NATT_Mailing_Type</fullName>
    <active>true</active>
    <description>NATT: Allows users with the NATT Bypass HQ Address custom permission to use the HQ type</description>
    <errorConditionFormula>AND($Permission.NATT_Bypass_Mailing_Address=false,
RecordType.DeveloperName=&apos;NATT_Address&apos;,
TEXT(NATT_Type__c) = &apos;Mailing&apos;,
NATT_Account__r.RecordType.DeveloperName = &quot;Dealer&quot;
)</errorConditionFormula>
    <errorDisplayField>NATT_Type__c</errorDisplayField>
    <errorMessage>You do not have permission to modify a Mailing address</errorMessage>
</ValidationRule>