NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/validationRules/NATT_Other_Mailing_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>NATT_Other_Mailing_Type</fullName>
    <active>true</active>
    <description>NATT: Allows users with the NATT Bypass Other Mailing Address custom permission to use the Other Mailing type</description>
    <errorConditionFormula>AND($Permission.NATT_Bypass_Other_Mailing_Address=false,
RecordType.DeveloperName=&apos;NATT_Address&apos;,
TEXT(NATT_Type__c) = &apos;Other Mailing&apos;)</errorConditionFormula>
    <errorDisplayField>NATT_Type__c</errorDisplayField>
    <errorMessage>You do not have permission to modify a Other Mailing address</errorMessage>
</ValidationRule>