NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/validationRules/NATT_Parts_Ship_To_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>NATT_Parts_Ship_To_Type</fullName>
    <active>true</active>
    <description>NATT: Allows users with the NATT Bypass Parts Ship To Address custom permission to use the Parts Ship To type</description>
    <errorConditionFormula>AND($Permission.NATT_Bypass_Parts_Ship_To_Address=false,
RecordType.DeveloperName=&apos;NATT_Address&apos;,
TEXT(NATT_Type__c) = &apos;Parts Ship To&apos;)</errorConditionFormula>
    <errorDisplayField>NATT_Type__c</errorDisplayField>
    <errorMessage>You do not have permission to modify a Parts Ship To address</errorMessage>
</ValidationRule>