NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/validationRules/NATT_Physical_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>NATT_Physical_Type</fullName>
    <active>true</active>
    <description>NATT: Allows users with the NATT Bypass Physical Address custom permission to use the Physical type</description>
    <errorConditionFormula>AND($Permission.NATT_Bypass_Physical_Address=false,
RecordType.DeveloperName=&apos;NATT_Address&apos;,
TEXT(NATT_Type__c) = &apos;Physical&apos;,
NATT_Account__r.RecordType.DeveloperName = &quot;Dealer&quot;
)</errorConditionFormula>
    <errorDisplayField>NATT_Type__c</errorDisplayField>
    <errorMessage>You do not have permission to modify a Physical address</errorMessage>
</ValidationRule>