NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/validationRules/NATT_Street_40_Characters_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>NATT_Street_40_Characters_Only</fullName>
    <active>true</active>
    <description>NATT and CTM Street should be 40 characters only</description>
    <errorConditionFormula>AND(
OR(RecordType.DeveloperName=&apos;NATT_Address&apos;,
RecordType.DeveloperName=&apos;CTM_Address&apos;),
LEN(NATT_Street__c) &gt; 40)</errorConditionFormula>
    <errorDisplayField>NATT_Street__c</errorDisplayField>
    <errorMessage>Street should be 40 characters only</errorMessage>
</ValidationRule>