NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NATT_Account_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>NATT_JDE_Address_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>