NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/listViews/CTBR_Addresses.listView-meta.xml
<ListView>
    <fullName>CTBR_Addresses</fullName>
    <columns>NAME</columns>
    <columns>NATT_Account_Name__c</columns>
    <columns>NATT_Street__c</columns>
    <columns>NATT_City__c</columns>
    <columns>CTBR_District__c</columns>
    <columns>NATT_State_Province__c</columns>
    <columns>NATT_Zip_Postal_Code__c</columns>
    <columns>NATT_Country__c</columns>
    <columns>NATT_Address_Formatted__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NATT_Address__c.CTBR_Address</value>
    </filters>
    <label>CTBR Endereços</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinatesInternal>CTBR</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>