NATTQA-ENV/force-app/main/default/objects/NATT_Address__c/listViews/NATT_Addresses.listView-meta.xml
<ListView>
    <fullName>NATT_Addresses</fullName>
    <columns>NAME</columns>
    <columns>NATT_Account_Name__c</columns>
    <columns>NATT_Street__c</columns>
    <columns>NATT_City__c</columns>
    <columns>NATT_State_Province__c</columns>
    <columns>NATT_Zip_Postal_Code__c</columns>
    <columns>NATT_Country__c</columns>
    <columns>NATT_Address_Formatted__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NATT_Account__c</field>
        <operation>startsWith</operation>
        <value>Gateway</value>
    </filters>
    <label>NATT Addresses</label>
</ListView>